--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
+    "babel-plugin-module-resolver": "^2.7.0",
     "babel-preset-react-native": "1.9.1",
     "jest": "19.0.2",
     "react-test-renderer": "16.0.0-alpha.6"
