--- a/web/package.json
+++ b/web/package.json
@@ -18,9 +18,13 @@
   "license": "MIT",
   "dependencies": {
     "file-loader": "^0.9.0",
+    "leaflet": "^1.0.3",
+    "leaflet-draw": "^0.4.9",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-hot-loader": "^3.0.0-beta.2",
+    "react-leaflet": "^1.1.6",
+    "react-leaflet-draw": "^0.15.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.0",
     "react-router-redux": "^4.0.4",
