--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "file-loader": "^0.9.0",
     "leaflet": "^1.0.3",
     "leaflet-draw": "^0.4.9",
+    "prop-types": "^15.5.9",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-hot-loader": "^3.0.0-beta.2",
