--- a/server/package.json
+++ b/server/package.json
@@ -1,15 +1,9 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "### Port This server should run on http://localhost:8000",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
+  "name": "node-api",
+  "main": "server.js",
   "dependencies": {
-    "express": "^4.15.2"
-  },
-  "devDependencies": {}
+    "express": "~4.0.0",
+    "mongoose": "~3.6.13",
+    "body-parser": "~1.0.1"
+  }
 }
