--- a/web/package.json
+++ b/web/package.json
@@ -23,6 +23,8 @@
     "prop-types": "^15.5.9",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
+    "react-fontawesome": "^1.6.1",
+    "react-google-places-suggest": "^2.1.1",
     "react-hot-loader": "^3.0.0-beta.2",
     "react-leaflet": "^1.1.6",
     "react-leaflet-draw": "^0.15.0",
@@ -47,18 +49,18 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.16.1",
     "json-loader": "^0.5.4",
-    "node-sass": "^3.7.0",
+    "node-sass": "^3.13.1",
     "postcss-loader": "^0.9.1",
     "react-addons-test-utils": "^15.0.2",
     "redux-devtools": "^3.2.0",
     "redux-devtools-dock-monitor": "^1.1.1",
     "redux-devtools-log-monitor": "^1.0.11",
     "rimraf": "^2.5.2",
-    "sass-loader": "^3.2.0",
+    "sass-loader": "^3.2.3",
     "stats-webpack-plugin": "^0.3.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.0",
+    "webpack": "^1.15.0",
     "webpack-dev-server": "^1.14.1"
   }
 }
