--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,7 @@
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-fontawesome": "^1.6.1",
+    "react-google-maps-loader": "^2.0.2",
     "react-google-places-suggest": "^2.1.1",
     "react-hot-loader": "^3.0.0-beta.2",
     "react-leaflet": "^1.1.6",
