--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,7 @@
     "leaflet": "^1.0.3",
     "leaflet-draw": "^0.4.9",
     "prop-types": "^15.5.9",
+    "rc-progress": "^2.1.1",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-fontawesome": "^1.6.1",
