--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
   "author": "Jean-Pierre Sierens",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.16.1",
     "file-loader": "^0.9.0",
     "leaflet": "^1.0.3",
     "leaflet-draw": "^0.4.9",
