--- a/server/package.json
+++ b/server/package.json
@@ -2,8 +2,9 @@
   "name": "node-api",
   "main": "server.js",
   "dependencies": {
+    "body-parser": "~1.0.1",
     "express": "~4.0.0",
-    "mongoose": "~3.6.13",
-    "body-parser": "~1.0.1"
+    "mongodb": "^2.2.26",
+    "mongoose": "^3.6.20"
   }
 }
