--- a/web/package.json
+++ b/web/package.json
@@ -34,7 +34,10 @@
     "react-redux": "^4.4.5",
     "react-router": "^2.4.0",
     "react-router-redux": "^4.0.4",
-    "redux": "^3.5.2"
+    "redux": "^3.5.2",
+    "redux-axios-middleware": "^4.0.0",
+    "redux-logger": "^2.7.4",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.6",
