--- a/app/package.json
+++ b/app/package.json
@@ -12,7 +12,8 @@
     "react": "16.0.0-alpha.6",
     "react-native": "0.43.3",
     "react-native-linear-gradient": "^2.0.0",
-    "react-native-maps": "^0.14.0"
+    "react-native-maps": "^0.14.0",
+    "react-native-scrollable-tab-view": "^0.6.6"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
