--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "url": "https://github.com/liawesomesaucer/cogs121/issues"
   },
   "scripts": {
-    "start": { "postinstall": "cd server && npm install" }
+    "start": "cd server && npm install && npm start"
   },
   "homepage": "https://github.com/liawesomesaucer/cogs121#readme"
 }
