--- a/web/package.json
+++ b/web/package.json
@@ -41,7 +41,7 @@
     "redux-logger": "^2.7.4",
     "redux-thunk": "^2.2.0",
     "url-loader": "^0.5.8",
-    "webpack": "^1.15.0",
+    "webpack": "^1.15.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.6",
