--- a/web/package.json
+++ b/web/package.json
@@ -41,7 +41,8 @@
     "redux-logger": "^2.7.4",
     "redux-thunk": "^2.2.0",
     "url-loader": "^0.5.8",
-    "webpack": "^1.15.0"
+    "webpack": "^1.15.0",
+    "webpack-dev-server": "^1.14.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.6",
@@ -70,6 +71,5 @@
     "stats-webpack-plugin": "^0.3.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack-dev-server": "^1.14.1"
   }
 }
