--- a/web/package.json
+++ b/web/package.json
@@ -70,6 +70,6 @@
     "sass-loader": "^3.2.3",
     "stats-webpack-plugin": "^0.3.1",
     "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
+    "url-loader": "^0.5.7"
   }
 }
