--- a/web/package.json
+++ b/web/package.json
@@ -40,9 +40,9 @@
     "redux-axios-middleware": "^4.0.0",
     "redux-logger": "^2.7.4",
     "redux-thunk": "^2.2.0",
-    "url-loader": "^0.5.8",
-    "webpack": "^1.15.0",
-    "webpack-dev-server": "^1.14.1",
+    "url-loader": "^0.5.8"
+  },
+  "devDependencies": {
     "autoprefixer": "^6.3.6",
     "babel-core": "^6.8.0",
     "babel-eslint": "^6.0.4",
@@ -68,8 +68,8 @@
     "sass-loader": "^3.2.3",
     "stats-webpack-plugin": "^0.3.1",
     "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7"
-  },
-  "devDependencies": {
+    "url-loader": "^0.5.7",
+    "webpack": "^1.15.0",
+    "webpack-dev-server": "^1.14.1"
   }
 }
