--- a/web/package.json
+++ b/web/package.json
@@ -40,7 +40,9 @@
     "redux-axios-middleware": "^4.0.0",
     "redux-logger": "^2.7.4",
     "redux-thunk": "^2.2.0",
-    "url-loader": "^0.5.8",
+    "url-loader": "^0.5.8"
+  },
+  "devDependencies": {
     "autoprefixer": "^6.3.6",
     "babel-core": "^6.8.0",
     "babel-eslint": "^6.0.4",
@@ -69,7 +71,5 @@
     "url-loader": "^0.5.7",
     "webpack": "^1.15.0",
     "webpack-dev-server": "^1.14.1"
-  },
-  "devDependencies": {
   }
 }
