--- a/web/package.json
+++ b/web/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "",
-    "start": "node server",
-    "build": "rimraf dist && webpack --config ./webpack.production.config.js --progress --profile --colors",
+    "start": "node app",
+    "dev": "node server",
+    "build": "NODE_ENV=production && webpack --config ./webpack.production.config.js --progress --profile --colors",
     "eslint": "eslint .",
     "heroku-postbuild": "webpack -p --config ./webpack.prod.config.js --progress"
   },
@@ -42,7 +43,8 @@
     "redux-logger": "^2.7.4",
     "redux-thunk": "^2.2.0",
     "url-loader": "^0.5.8",
-    "webpack": "^1.15.0"
+    "webpack": "^1.15.0",
+    "webpack-hot-middleware": "^2.18.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.6",
