--- a/web/package.json
+++ b/web/package.json
@@ -20,9 +20,11 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.16.1",
+    "express": "^4.15.3",
     "file-loader": "^0.9.0",
     "leaflet": "^1.0.3",
     "leaflet-draw": "^0.4.9",
+    "path": "^0.12.7",
     "prop-types": "^15.5.9",
     "rc-progress": "^2.1.1",
     "react": "^15.0.2",
